--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^16.11.7",
+    "autoprefixer": "^10.4.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -51,6 +52,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "nx": "16.7.4",
     "nx-cloud": "latest",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.2",
     "typescript": "~5.1.3"
   }
 }
