--- a/project.json
+++ b/project.json
@@ -65,10 +65,12 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "ijudge-ng:build:production"
+          "browserTarget": "ijudge-ng:build:production",
+          "proxyConfig": "proxy.config.json"
         },
         "development": {
-          "browserTarget": "ijudge-ng:build:development"
+          "browserTarget": "ijudge-ng:build:development",
+          "proxyConfig": "proxy.config.json"
         }
       },
       "defaultConfiguration": "development"
