--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,7 +1,7 @@
 
 {
     "/api": {
-      "target": "https://ijudge-api.iservkmitl.tech/api",
+      "target": "http://localhost:15000",
       "secure": false
     }
   }
