--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "serve:ssr": "node dist/ijudge-ng/server/main.js",
     "build:ssr": "nx build && nx run ijudge-ng:server",
     "prerender": "nx run ijudge-ng:prerender",
-    "vercel-build": "yarn build:ssr"
+    "vercel-build": "yarn build:ssr",
+    "format": "nx format:write"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,7 @@
     "@angular/router": "^16.1.0",
     "@nguniversal/express-engine": "^16.2.0",
     "express": "^4.15.2",
+    "http-proxy-middleware": "^2.0.6",
     "ng-zorro-antd": "16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -54,6 +56,7 @@
     "nx": "16.7.4",
     "nx-cloud": "latest",
     "postcss": "^8.4.5",
+    "prettier": "^3.0.2",
     "tailwindcss": "^3.0.2",
     "typescript": "~5.1.3"
   }
