--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nguniversal/express-engine": "^16.2.0",
     "express": "^4.15.2",
     "http-proxy-middleware": "^2.0.6",
+    "ng-process-env": "^16.0.6",
     "ng-zorro-antd": "16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
