Update: project.json

--- a/project.json
+++ b/project.json
@@ -47,6 +47,11 @@
               "maximumError": "4kb"
             }
           ],
+          "optimization": {
+            "scripts": true,
+             "styles": true,
+             "fonts": false
+         },
           "outputHashing": "all"
         },
         "development": {
